# utaupy

./: .gitignore  LICENSE.md  LICENSE.🍣.md  PyPIにアップロードするやつ.bat  PyPIに投げるやつ.bat  README.md  convert.py  htmlやつ.txt  label.py  otoini.py  pyproject.toml  reclist.py  setup.py  table.py  ust.py  utaupy.py
docs/: .gitignore  CNAME  conf.py  index.md  utaupy.rst
docs/_build/doctrees/: environment.pickle  index.doctree  utaupy.doctree  utaupy.utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  utaupy.html  utaupy.utils.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  utaupy.utils.rst.txt
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  utaupy.html
docs/html/_modules/: index.html
docs/html/_modules/utaupy/: backup.html  convert.html  hts.html  label.html  otoini.html  reaper.html  reclist.html  setparam.html  shiro.html  svp.html  table.html  ust.html  utau.html  utauplugin.html
docs/html/_sources/: index.rst.txt  utaupy.rst.txt
table/: japanese.table  japanese_sinsy_sjis.table  japanese_sjis.table  utaupy_otoini_kana.txt  vowel_consonant_kiritan.txt  vowel_consonant_sinsy.txt
utaupy/: __init__.py  backup.py  convert.py  hts.py  label.py  otoini.py  reaper.py  reclist.py  setparam.py  shiro.py  svp.py  table.py  ust.py  utau.py  utauplugin.py
utaupy/old/: label_oldver.py
utaupy/utils/: __init__.py  _hts2csv.py  _hts2json.py  _hts2ust.py  _trie.py  _ust2hts.py
(+14 files in other folders)
